# toy-model-of-computation-in-superposition

./: .gitignore  README.md  lucius_toy_model.ipynb  pyproject.toml  toy_cis.ipynb  weighted_mse.pt
cis/: models.py
examples/: toy_cis.ipynb
mlpinsoup/: ex2_compare_datasets.py  mlpinsoup.py
notebooks/: 2feature_1neuron_comparisons  Comp-in-soup.ipynb  Mechanism_comp-in-soup.ipynb  Mechanism_compressed_computation.ipynb  Phase_diagram.ipynb  Polysemanticity_across_training.ipynb  Test_Apollo_param_ReLUplusXembed.ipynb  follow_up_to_compressed_computation_model_in_apd_paper.ipynb  frankenstein_model.ipynb  log_plots_relu_models.ipynb  loss_vs_sparsity_plots_Sara.ipynb  model_comp.ipynb  noise_res_cis.ipynb  noise_res_cis_2feature_1neuron-Sara.ipynb  noise_res_cis_2feature_1neuron.ipynb  noise_res_cis_notes.md  noise_res_cis_playground.ipynb  playing_with_ResEmbedMlp.ipynb  rr_esv_noise_matrix_comparison.ipynb  toy_cis.ipynb  toy_cis0.ipynb  toy_models_characteristics.ipynb
paper_code/: AGENTS.md  baselines.py  ex1_compare_sparsity.py  ex3_noise_level.py  ex4_bias_strength.py  ex5_linear_case.py  mlpinsoup.py  nb1_sparsity_regimes.py  nb2_noise_equivalence.py  nb3_noise_optimum.py  nb3_svd_comparison.py  nb3_svd_nmf.py  nb4_bias_strength.py  nb5_svd_comparison.py  nb5_svd_comparison_neuron_directions_jb.py  nb6_mixing_matrix_rank.py  nb6_mixing_matrix_rank_jb.py  nb7_semi_nmf_solution.py  nb8_clean_noisy_transplants.py  nb8_test_baselines.py  neuron_aligned_mixing_matrix_exps.ipynb
tests/: test_models.py
toy_cis/: models.py  plot.py  util.py
