[project]
#authors = [{name = "<name>", email = "<email>"},]
description = "Experiments on toy models of CiS"
name = "toy_cis"
requires-python = ">= 3.13"
version = "0.1.0"
dependencies = [
    "python-freethreading = '*'",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]  # for linux: "linux-64"

[tool.pixi.pypi-options]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu121", 
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
]

[tool.pixi.pypi-dependencies]
cis = { path = ".", editable = true }
jax = { version = "==0.4.21" }  # for linux: "==0.4.28+cuda12"
jaxlib = { version = "==0.4.21" }  # for linux: remove jaxlib dep (will be installed with jax)
pip = "*"
sortedcontainers = "*"
torch = { version = "==2.5.1+cu121" }
wandb = "*"

[tool.pixi.dependencies]
datasets = { version = ">=2.14.6" }
einops = "*"
huggingface_hub = "*"
ipdb = "*"
ipykernel = "*"
jaxtyping = "*"
jupyter = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
plotly = { version = ">=5.23.0,<6" }
pytest = "*"
scikit-learn = "*"
seaborn = "*"
tensorboard = "*"
tqdm = "*"
typeguard = "*"
rich = "*"
ruff = "*"

[tool.pixi.tasks]

[tool.ruff]
line-length = 99
lint.ignore = [
    "F722",  # syntax error in forward declaration
    "E201",  # whitespace after '('
    "E202",  # whitespace before ')'
    "E203",  # whitespace before ':'
]
